[package]
name = "naas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
